--- a/product-service/package.json
+++ b/product-service/package.json
@@ -19,5 +19,9 @@
     "serverless": "3.21.0",
     "serverless-webpack": "5.7.1",
     "webpack": "5.73.0"
+  },
+  "dependencies": {
+    "dotenv": "10.0.0",
+    "pg": "8.7.3"
   }
 }
