--- a/product-service/serverless.yml
+++ b/product-service/serverless.yml
@@ -6,6 +6,14 @@ provider:
   runtime: nodejs12.x
   stage: dev
   region: eu-west-1
+  environment:
+    PG_HOST: ${env:PG_HOST}
+    PG_PORT: ${env:PG_PORT}
+    PG_DATABASE: ${env:PG_DATABASE}
+    PG_USERNAME: ${env:PG_USERNAME}
+    PG_PASSWORD: ${env:PG_PASSWORD}
+
+useDotenv: true
 
 plugins:
   - serverless-webpack
@@ -17,12 +25,21 @@ functions:
       - http:
           path: products
           method: get
+          cors: true
   getProductById:
     handler: handlers/getProductById.getProductById
     events:
       - http:
           path: products/{id}
           method: get
+          cors: true
+  createProduct:
+    handler: handlers/createProduct.createProduct
+    events:
+      - http:
+          path: products
+          method: post
+          cors: true
 
 custom:
   webpack:
