--- a/import-service/package.json
+++ b/import-service/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "aws-sdk": "2.1188.0",
-    "csv-parser": "3.0.0"
+    "csv-parser": "3.0.0",
+    "dotenv": "10.0.0"
   }
 }
