--- a/product-service/package.json
+++ b/product-service/package.json
@@ -17,6 +17,7 @@
     "babel-loader": "8.2.5",
     "jest": "28.1.3",
     "serverless": "3.21.0",
+    "serverless-lift": "^1.20.2",
     "serverless-webpack": "5.7.1",
     "webpack": "5.73.0"
   },
